--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
 		        <artifactId>heroku-maven-plugin</artifactId>
 		        <version>0.5.4</version>
 		        <configuration>
-		        	 <appName>movibit</appName>
+		        	 <appName>mobserv</appName>
 		        </configuration>
 	      	</plugin>
 		    
